--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "schedules",
-    "version": "3.1.0-edge.2",
+    "version": "3.1.0-edge.3",
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
@@ -11,17 +11,17 @@
         "build:validate-sw": "npm run build; ls dist | grep precache; cat dist/service-worker.js | head -4"
     },
     "dependencies": {
-        "@sentry/tracing": "^6.11.0",
-        "@sentry/vue": "^6.11.0",
-        "@vue/composition-api": "^1.0.0-rc.13",
-        "core-js": "^3.8.2",
-        "marked": "^3.0.0",
+        "@sentry/tracing": "^6.18.2",
+        "@sentry/vue": "^6.18.2",
+        "@vue/composition-api": "^1.4.9",
+        "core-js": "^3.21.1",
+        "marked": "^3.0.8",
         "register-service-worker": "^1.7.2",
         "utds-component-library": "^1.0.9",
-        "vue": "^2.6.11",
-        "vue-router": "^3.4.9",
+        "vue": "^2.6.14",
+        "vue-router": "^3.5.3",
         "vue-toastification": "^1.7.8",
-        "vuetify": "^2.4.0"
+        "vuetify": "^2.6.4"
     },
     "devDependencies": {
         "@mdi/js": "^5.9.55",
@@ -39,7 +39,7 @@
         "@vue/eslint-config-typescript": "^5.0.2",
         "@vue/preload-webpack-plugin": "^1.1.2",
         "@vue/test-utils": "^1.0.3",
-        "axe-core": "^4.3.2",
+        "axe-core": "^4.4.1",
         "babel-eslint": "^10.1.0",
         "eslint": "^6.7.2",
         "eslint-plugin-prettier": "^3.3.1",
@@ -52,8 +52,9 @@
         "typescript": "~4.1.5",
         "vue-axe": "^2.4.4",
         "vue-cli-plugin-vuetify": "^2.0.9",
-        "vue-template-compiler": "^2.6.11",
+        "vue-loader": "^17.0.0",
+        "vue-template-compiler": "^2.6.14",
         "vuetify-loader": "^1.3.0",
-        "webpack-bundle-analyzer": "^4.4.0"
+        "webpack-bundle-analyzer": "^4.5.0"
     }
 }
