Add the help center (feature parity with 3.1.0)

--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
         "@headlessui/vue": "^1.5.0",
         "@hkamran/utility-datetime": "^1.0.3",
         "@hkamran/utility-strings": "^1.0.1",
+        "@hkamran/utility-web": "^1.0.0",
         "@vueuse/core": "^8.0.1",
+        "@vueuse/head": "^0.7.5",
         "array-keyed-map": "^2.1.2",
         "feather-icons": "^4.28.0",
+        "markdown-it": "^12.3.2",
         "pinia": "^2.0.12",
         "vue": "^3.2.25",
         "vue-router": "^4.0.14",
@@ -25,6 +28,7 @@
         "@hkamran/prettier-config": "^1.1.1",
         "@tailwindcss/typography": "^0.5.2",
         "@types/feather-icons": "^4.7.0",
+        "@types/markdown-it": "^12.2.3",
         "@typescript-eslint/eslint-plugin": "^5.15.0",
         "@typescript-eslint/parser": "^5.15.0",
         "@vitejs/plugin-vue": "^2.2.0",
