--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "4.0.0-beta.0",
     "scripts": {
         "dev": "vite",
-        "build": "vue-tsc --noEmit && vite build",
+        "build": "cross-env DEBUG=vite-plugin-pwa:* vite build",
         "preview": "vite preview",
         "lint": "eslint --ext .js,.ts,.vue --fix",
         "format": "prettier . --write"
@@ -20,6 +20,7 @@
         "feather-icons": "^4.28.0",
         "markdown-it": "^12.3.2",
         "pinia": "^2.0.12",
+        "pinia-plugin-persistedstate": "^1.5.1",
         "vue": "^3.2.25",
         "vue-router": "^4.0.14",
         "vue-timer-hook": "^1.0.0"
@@ -33,10 +34,12 @@
         "@typescript-eslint/parser": "^5.15.0",
         "@vitejs/plugin-vue": "^2.2.0",
         "autoprefixer": "^10.4.2",
+        "cross-env": "^7.0.3",
         "eslint": "^8.11.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-vue": "^8.5.0",
         "eslint-plugin-vuejs-accessibility": "^1.1.1",
+        "https-localhost": "^4.7.1",
         "postcss": "^8.4.8",
         "prettier": "^2.5.1",
         "prettier-plugin-tailwindcss": "^0.1.8",
@@ -44,7 +47,12 @@
         "typescript": "^4.5.4",
         "vite": "^2.8.0",
         "vite-plugin-html-config": "^1.0.8",
-        "vue-tsc": "^0.29.8"
+        "vite-plugin-pwa": "^0.11.13",
+        "vue-tsc": "^0.29.8",
+        "workbox-core": "^6.5.2",
+        "workbox-precaching": "^6.5.2",
+        "workbox-routing": "^6.5.2",
+        "workbox-window": "^6.5.2"
     },
     "prettier": "@hkamran/prettier-config"
 }
