--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "version": "4.0.0-beta.0",
     "scripts": {
         "dev": "vite",
-        "build": "cross-env DEBUG=vite-plugin-pwa:* vite build",
+        "dev:https": "pnpm build; pnpx serve",
+        "build": "rimraf ./dist; cross-env DEBUG=vite-plugin-pwa:* vite build",
         "preview": "vite preview",
         "lint": "eslint --ext .js,.ts,.vue --fix",
         "format": "prettier . --write"
@@ -20,7 +21,6 @@
         "feather-icons": "^4.28.0",
         "markdown-it": "^12.3.2",
         "pinia": "^2.0.12",
-        "pinia-plugin-persistedstate": "^1.5.1",
         "vue": "^3.2.25",
         "vue-router": "^4.0.14",
         "vue-timer-hook": "^1.0.0"
@@ -43,6 +43,7 @@
         "postcss": "^8.4.8",
         "prettier": "^2.5.1",
         "prettier-plugin-tailwindcss": "^0.1.8",
+        "rimraf": "^3.0.2",
         "tailwindcss": "^3.0.23",
         "typescript": "^4.5.4",
         "vite": "^2.8.0",
