--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "schedules",
-    "version": "3.1.0-edge.4",
+    "version": "3.1.1",
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
