--- a/src/releaseNotes.json
+++ b/src/releaseNotes.json
@@ -152,7 +152,7 @@
             "Switch font from Lato to Barlow",
             "Remove icons from schedule cards",
             "Update terms of service and privacy policy notice",
-            "Add schedule overrides (not currently uesr-editable)",
+            "Add schedule overrides (not currently user-editable)",
             "Add the AUHSD finals schedule"
         ]
     }
