Add dedicated release notes page, fix import/export icon bug, add updated next period calculation method, show next period starting time instead of ending time, add caching to service worker

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "workbox-core": "^6.5.2",
         "workbox-precaching": "^6.5.2",
         "workbox-routing": "^6.5.2",
+        "workbox-strategies": "^6.5.4",
         "workbox-window": "^6.5.2"
     },
     "prettier": "@hkamran/prettier-config"
