--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "schedules",
     "private": true,
-    "version": "4.0.0-beta.1",
+    "version": "4.0.1",
     "scripts": {
         "dev": "vite",
         "dev:https": "pnpm build; pnpx serve",
@@ -15,13 +15,14 @@
         "@hkamran/utility-datetime": "^1.0.3",
         "@hkamran/utility-strings": "^1.0.1",
         "@hkamran/utility-web": "^1.0.0",
-        "@vueuse/core": "^8.0.1",
-        "@vueuse/head": "^0.7.5",
+        "@vueuse/core": "^9.3.0",
+        "@vueuse/head": "^0.7.12",
         "array-keyed-map": "^2.1.2",
         "feather-icons": "^4.28.0",
+        "lucide-vue-next": "^0.90.0",
         "markdown-it": "^12.3.2",
         "pinia": "^2.0.12",
-        "vue": "^3.2.25",
+        "vue": "^3.2.31",
         "vue-router": "^4.0.14",
         "vue-timer-hook": "^1.0.0"
     },
@@ -32,7 +33,7 @@
         "@types/markdown-it": "^12.2.3",
         "@typescript-eslint/eslint-plugin": "^5.15.0",
         "@typescript-eslint/parser": "^5.15.0",
-        "@vitejs/plugin-vue": "^2.2.0",
+        "@vitejs/plugin-vue": "^2.2.4",
         "autoprefixer": "^10.4.2",
         "cross-env": "^7.0.3",
         "eslint": "^8.11.0",
@@ -45,8 +46,8 @@
         "prettier-plugin-tailwindcss": "^0.1.8",
         "rimraf": "^3.0.2",
         "tailwindcss": "^3.0.23",
-        "typescript": "^4.5.4",
-        "vite": "^2.8.0",
+        "typescript": "^4.6.2",
+        "vite": "^2.8.6",
         "vite-plugin-html-config": "^1.0.8",
         "vite-plugin-pwa": "^0.11.13",
         "vue-tsc": "^0.29.8",
