--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "version": "4.0.5",
     "scripts": {
         "dev": "vite",
+        "dev:host": "vite --host",
         "dev:https": "pnpm build; pnpx serve",
         "build": "rimraf ./dist; cross-env DEBUG=vite-plugin-pwa:* vite build",
         "preview": "vite preview",
